--- a/style.css
+++ b/style.css
@@ -4,18 +4,13 @@
   box-sizing: border-box;
 }
 
-/* body {
-  background-color: #201a1ae2;
-} */
+body {
+  background-color: #000000;
+  color: white;
+}
 
 .montserrat {
   font-family: "Montserrat", sans-serif;
-}
-
-header {
-
-  background: linear-gradient(45deg, #f7e83fd2 0%, #fb09b2b7 51%, #00f84ac7 100%);
-
 }
 
 /* common class */
@@ -26,19 +21,23 @@ header {
 }
 
 .btn {
-  background-color: black;
+  background-color: orange;
   border: none;
   padding: 15px 20px;
   border-radius: 6px;
-  color: orange;
+  color: black;
   font-size: 1rem;
   font-weight: 600;
   cursor: pointer;
+  border: 1px solid goldenrod;
+  transition: 0.3s ease-in;
 }
 
 .btn:hover {
-  background-color: orange;
   color: black;
+  background-color: black;
+  border: 1px solid goldenrod;
+  color: white;
 }
 
 .h {
@@ -47,7 +46,7 @@ header {
 }
 
 .pgray {
-  color: #0000007b;
+  color: white;
 }
 
 .bigh {
@@ -56,9 +55,25 @@ header {
 
 .ptag {
   font-weight: 500;
+  color: white;
 }
 
 /* */
+.header-ab {
+  background: linear-gradient(45deg, #13e5dbe4 0%, #fb09b2ee 51%, #00f84ac7 100%);
+  padding: 20px;
+  text-align: center;
+  color: white;
+  font-weight: bold;
+  letter-spacing: 4px;
+  word-spacing: 10px;
+  border-bottom: 2px solid gold;
+}
+
+header {
+  background-color: #0000005a;
+}
+
 nav {
   display: flex;
   justify-content: space-between;
@@ -85,18 +100,19 @@ nav ul li a {
   text-decoration: none;
   font-size: 1.2rem;
   text-transform: uppercase;
-  font-weight:bold;
+  font-weight: bold;
   white-space: nowrap;
-  transition: 0.4s ease;
-  padding: 10px 15px;
-  color:white;
+  transition: 0.5s ease;
+  padding: 8px 12px;
+  color: orange;
   margin-left: 20px;
   border-radius: 10px;
 }
 
 nav ul li a:hover {
-  background: #1b1b1b44;
+
   border-radius: 10px;
+  background-color: #ffffff45;
 
 }
 
@@ -162,9 +178,73 @@ nav ul li a:hover {
   text-align: center;
 }
 
+/* shop section */
+.shop h2 {
+  font-size: 4rem;
+  margin: 50px 0px;
+  border-bottom: 1px solid rgba(172, 255, 47, 0.331);
+  padding-bottom: 20px;
+}
+
+.img img {
+  width: 250px;
+  border-radius: 12px;
+}
+
+.shop-contant span {
+  font-size: 1.2rem;
+  font-weight: 600;
+  color: rgb(0, 0, 255);
+}
+
+.shop-contant {
+  display: flex;
+  gap: 30px;
+  padding: 20px 10px;
+}
+
+.shop-contant button {
+  padding: 5px 15px;
+  border: none;
+  border-radius: 8px;
+  border: 1px solid goldenrod;
+}
+
+.simgcon {
+  background: linear-gradient(45deg, #13e5dbe4 0%, #fb09b2ee 51%, #00f84ac7 100%);
+  width: 250px;
+  text-align: center;
+  padding-bottom: 30px;
+  border-radius: 12px;
+  box-shadow: 1px 2px 5px #00000063;
+}
+
+.simgcon:hover {
+  box-shadow: 1px 2px 5px 1px #0aa30f;
+}
+
+.simgcon p {
+  font-weight: 500;
+
+}
+
+.s-img-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+  flex-wrap: wrap;
+}
+
 /* mobile responsive */
 
 @media screen and (max-width:576px) {
+  .header-ab {
+    letter-spacing: 2px;
+    word-spacing: 2px;
+    font-size: 0.8rem;
+  }
+
   .hclass {
     font-size: 1.2rem;
     line-height: 50px;
@@ -192,12 +272,16 @@ nav ul li a:hover {
 
   .menu-png {
     display: inline-block;
+
   }
 
   .menu-png img {
     width: 40px;
-    height: auto;
-    margin-right: 50px;
+  }
+
+  .menu-png {
+    border-radius: 10px;
+    margin-right: 30px;
   }
 
   nav ul {
@@ -245,4 +329,35 @@ nav ul li a:hover {
     width: 400px;
 
   }
+
+  /* shop section responsive */
+  .shop h2 {
+    font-size: 3rem;
+    text-align: center;
+
+  }
+
+  .img img {
+    width: 200px;
+  }
+
+  .shop-contant span {
+    font-size: 1rem;
+  }
+
+  .simgcon {
+    width: 200px;
+    padding-bottom: 10px;
+  }
+
+  .shop-contant button {
+    padding: 3px 10px;
+  }
+  
+.shop-contant {
+  display: flex;
+  gap: 10px;
+  padding: 8px 15px;
+
+}
 }
